--- a/confar.yml
+++ b/confar.yml
@@ -5,11 +5,11 @@ flows:
   default:
     - name: docker build
       shell:
-        # - sh -c docker build . -t sanjai/pi-gate:1.0.0 --build-arg CACHEBUST=$(date +%s)
-        - docker
-        - build
-        - .
-        - -t
-        - sanjai/pi-gate:1.0.0
-        - --build-arg
-        - CACHEBUST=$(date +%s)
+        - docker build ${PWD} -t sanjai/pi-gate:1.0.0 --build-arg CACHEBUST=$(date +%s)
+        # - docker
+        # - build
+        # - .
+        # - -t
+        # - sanjai/pi-gate:1.0.0
+        # - --build-arg
+        # - CACHEBUST=$(date +%s)
