--- a/confar.yml
+++ b/confar.yml
@@ -4,12 +4,17 @@ id: 123
 flows:
   default:
     - name: docker build
-      shell:
-        - docker build ${PWD} -t sanjai/pi-gate:1.0.0 --build-arg CACHEBUST=$(date +%s)
-        # - docker
-        # - build
-        # - .
-        # - -t
-        # - sanjai/pi-gate:1.0.0
-        # - --build-arg
-        # - CACHEBUST=$(date +%s)
+      shell: docker build ${PWD} -t sanjai/pi-gate:1.0.0 --build-arg CACHEBUST=$(date +%s)
+    - name: docker image push
+      skip: true
+      shell: docker image push sanjai/pi-gate:1.0.0
+    - name: docker image prune
+      skip: true
+      shell: docker image prune -a
+    - name: helm uninstall
+      shell: helm uninstall pi-gate -n pi-gate
+      catch:
+        - name: helm uninstall skip
+          shell: echo "skipping uninstall"
+    - name: helm upgrade
+      shell: helm upgrade -n pi-gate -i pi-gate helm/pi-gate --create-namespace
