--- a/helm/rncp-app/values.yaml
+++ b/helm/rncp-app/values.yaml
@@ -1,27 +1,27 @@
-# Default values for pi-gate.
+# Default values for rncp-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: sanjai/pi-gate
+  repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.0"
+  tag: ""
 
 imagePullSecrets: []
-nameOverride: "pi-gate"
-fullnameOverride: "pi-gate"
+nameOverride: ""
+fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "pi-gate"
+  name: ""
 
 podAnnotations: {}
 
@@ -39,21 +39,23 @@ securityContext:
   # runAsUser: 1000
 
 service:
-  type: NodePort
-  port: 8080
+  # Specifies whether a service should be created
+  create: false
+  type: ClusterIP
+  port: 80
 
 ingress:
-  enabled: true
-  className: "traefik"
+  enabled: false
+  className: ""
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: rockypic.local
+    - host: chart-example.local
       paths:
         - path: /
-          pathType: Prefix
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
