--- a/confar.yml
+++ b/confar.yml
@@ -6,10 +6,10 @@ flows:
     - name: docker build
       shell: docker build ${PWD} -t sanjai/pi-gate:1.0.0 --build-arg CACHEBUST=$(date +%s)
     - name: docker image push
-      skip: true
+      skip: false
       shell: docker image push sanjai/pi-gate:1.0.0
     - name: docker image prune
-      skip: true
+      skip: false
       shell: docker image prune -a
     - name: helm uninstall
       shell: helm uninstall pi-gate -n pi-gate
