--- a/helm/tunnel/values.yaml
+++ b/helm/tunnel/values.yaml
@@ -1,27 +1,27 @@
-# Default values for pi-gate.
+# Default values for rncp-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: sanjai/pi-gate
+  repository: ngrok/ngrok
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.0"
+  tag: "alpine"
 
 imagePullSecrets: []
-nameOverride: "pi-gate"
-fullnameOverride: "pi-gate"
+nameOverride: "tunnel"
+fullnameOverride: "tunnel"
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "pi-gate"
+  name: "tunnel"
 
 podAnnotations: {}
 
@@ -39,8 +39,10 @@ securityContext:
   # runAsUser: 1000
 
 service:
+  # Specifies whether a service should be created
+  create: true
   type: NodePort
-  port: 8080
+  port: 4040
 
 ingress:
   enabled: true
@@ -52,11 +54,7 @@ ingress:
   hosts:
     - host: rockypic.local
       paths:
-        - path: /ci
-          pathType: ImplementationSpecific
-    - host: mantis-easy-hopelessly.ngrok-free.app
-      paths:
-        - path: /ci
+        - path: /ngrok
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
